# strathweb-phi-engine

./: .gitignore  LICENSE  README.md  build-dotnet.cmd  build-dotnet.sh  build-ios.sh  build-swift.sh  build-xcframework.sh  build.sh
.github/workflows/: ci.yml
phi.engine.sample/phi.engine.sample/: AiViewModel.swift  ContentView.swift  phi_engine_sampleApp.swift
phi.engine.sample/phi.engine.sample.xcodeproj/: project.pbxproj
phi.engine.sample/phi.engine.sample.xcodeproj/xcshareddata/xcschemes/: phi.engine.sample.xcscheme
samples/csharp/: samples.slnx
samples/csharp/agent-framework/: Example01.cs  Program.cs  agentframework.console.csproj
samples/csharp/autogen/: Example01.cs  Example01_AssistantAgent.cs  Example02.cs  Example02_TwoAgent_MathChat.cs  Example03.cs  IMessageExtensions.cs  LocalPhiAgent.cs  LocalStreamingPhiAgent.cs  Program.cs  autogen.console.csproj
samples/csharp/chatclient/: NuGet.Config  Program.cs  chatclient.console.csproj
samples/csharp/console/: Program.cs  console.csproj
samples/ios/phi.engine.sample/phi.engine.sample/: AiViewModel.swift
samples/ios/phi.engine.sample/phi.engine.sample.xcodeproj/: project.pbxproj
samples/kotlin/: Main.java  main.kt  run.sh
samples/python/console/: main.py  run.bat  run.sh
samples/python/jupyter/: demo.ipynb  init.bat  init.sh
samples/swift/: main.swift  run.sh
samples/swift/sample-executable/: Package.swift
samples/swift/sample-executable/Sources/SampleExecutable/: main.swift
strathweb-phi-engine/: Cargo.toml  build.rs  uniffi.toml
strathweb-phi-engine/.cargo/: config.toml
strathweb-phi-engine/src/: engine.rs  lib.rs  strathweb-phi-engine.udl  text_generator.rs  token_stream.rs
