[package]
name = "strathweb-phi-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1.0"
uniffi = { version = "0.28.3", features=["build"] }
anyhow = "1.0.81"
candle-nn = { version = "0.9.1" }
candle-core = { version = "0.9.1" }
candle-transformers = { version = "0.9.1" }
hf-hub = { version = "0.3.2", features = ["tokio"] }
tokenizers = "0.19.1"
once_cell = "1.19.0"
serde_json = "1.0.132"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.aarch64-apple-darwin.dependencies]
candle-core = { version = "0.9.1", features = ["metal"] }
candle-transformers = { version = "0.9.1", features = ["metal"] }

[build-dependencies]
uniffi = { version = "0.28.3", features=["build"] }
uniffi_build = "0.28.3"
uniffi_bindgen = "0.28.3"
