[package]
name = "strathweb-phi-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
thiserror = "1.0"
uniffi = { version = "0.29.4", features=["build"] }
anyhow = "1.0.81"
candle-nn = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.2" }
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.2" }
candle-transformers = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.2" }
hf-hub = { version = "0.4.3", features = ["tokio"] }
tokenizers = "0.22.2"
once_cell = "1.19.0"
serde_json = "1.0.132"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[target.aarch64-apple-darwin.dependencies]
candle-core = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.2", features = ["metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle", tag = "0.9.2-alpha.2", features = ["metal"] }

[build-dependencies]
uniffi = { version = "0.29.4", features=["build"] }
uniffi_build = "0.29.4"
uniffi_bindgen = "0.29.4"
